@@ -1,5 +1,10 @@
 2007-11-25	Frank Richter	<frank.richter@gmail.com>
 
+* Added convenience function to register a global JavaScript object for
+  scripting.
+
+2007-11-25	Frank Richter	<frank.richter@gmail.com>
+
 * Added a wrapper for the Gecko component manager (the idea is to make common
   component manager/registrar tasks more convenient) as well as getters for
   the actual Gecko component manager, component registrar and service manager.
